fix(mpv): mpvView properly fits in its visible space & reacts to resizing/scrolling

--- a/src/style/layout.css
+++ b/src/style/layout.css
@@ -13,5 +13,5 @@ html {
 }
 
 body {
-  @apply flex h-full w-full flex-col items-center;
+  @apply flex h-fit min-h-full w-full flex-col items-center;
 }
